--- a/MyEventPlanner/app/build.gradle
+++ b/MyEventPlanner/app/build.gradle
@@ -36,7 +36,8 @@ dependencies {
     testImplementation 'com.squareup.assertj:assertj-android:1.1.0'
     androidTestImplementation 'com.android.support.test:runner:1.0.2'
     androidTestImplementation 'com.android.support.test:rules:1.0.2'
-    androidTestImplementation 'com.android.support.test.espresso:espresso-core:3.0.2'
+    androidTestImplementation 'com.android.support.test.espresso:espresso-core:3.0.0'
+    androidTestImplementation 'com.android.support.test.espresso:espresso-contrib:3.0.0'
     androidTestImplementation 'org.hamcrest:hamcrest-library:1.3'
     androidTestImplementation 'com.android.support.test.uiautomator:uiautomator-v18:2.1.3'
 
