--- a/MyEventPlanner/app/src/main/AndroidManifest.xml
+++ b/MyEventPlanner/app/src/main/AndroidManifest.xml
@@ -2,6 +2,8 @@
 <manifest xmlns:android="http://schemas.android.com/apk/res/android"
     package="com.dk.foi.myeventplanner">
 
+    <uses-permission android:name="android.permission.INTERNET" />
+
     <application
         android:allowBackup="true"
         android:icon="@mipmap/logo_icon"
@@ -20,6 +22,10 @@
         </activity>
         <activity
             android:name=".activities.AppPreferenceActivity"
+            android:screenOrientation="portrait">
+        </activity>
+        <activity
+            android:name=".activities.LoginActivity"
             android:screenOrientation="portrait">
         </activity>
     </application>
