Added design for User activity and PersonalEvents fragment
- added design and initial classes for User activity and PersonalEvents fragment - todo: business logic

--- a/MyEventPlanner/app/src/main/AndroidManifest.xml
+++ b/MyEventPlanner/app/src/main/AndroidManifest.xml
@@ -28,6 +28,11 @@
             android:name=".activities.LoginActivity"
             android:screenOrientation="portrait">
         </activity>
+        <activity
+            android:name=".activities.UserActivity"
+            android:screenOrientation="portrait"
+            android:theme="@style/AppTheme.NoActionBar">
+        </activity>
     </application>
 
 </manifest>
