--- a/MyEventPlanner/app/build.gradle
+++ b/MyEventPlanner/app/build.gradle
@@ -34,6 +34,7 @@ dependencies {
     // Tests
     testImplementation 'junit:junit:4.12'
     testImplementation 'com.squareup.assertj:assertj-android:1.1.0'
+    testImplementation 'org.json:json:20140107'
     androidTestImplementation 'com.android.support.test:runner:1.0.2'
     androidTestImplementation 'com.android.support.test:rules:1.0.2'
     androidTestImplementation 'com.android.support.test.espresso:espresso-core:3.0.0'
